===================================
Anderson Lite Changelog
===================================

Version 1.3.4
-----------------------------------
[updated] flexlider to version 2.6.0

Version 1.3.3
-----------------------------------
[added] support for Jetpack Infinite Scroll feature

Version 1.3.2
-----------------------------------
[removed] extract() function from widget files for better readable code
[changed] all themezee.com links to https and made them translatable

Version 1.3.1
-----------------------------------
[added] support for ThemeZee Related Posts plugin
[added] category and tag descriptions on archive template
[added] previous/next post navigation on single post view

Version 1.3
-----------------------------------
[added] basic support for wooCommerce plugin
[added] support for ThemeZee Breadcrumbs plugin
[added] custom header image settings
[added] email icon to social menu
[added] theme links in theme options panel

Version 1.2.9
-----------------------------------
[added] Post Slider page template
[changed] all h2 post and page titles to h1 for better SEO
[removed] empty spaces at the end of template files
[fixed] styling of 404 template

Version 1.2.8
-----------------------------------
[added] escaping for translation strings for improved security
[improved] structure of post meta functions for better re-usability
[fixed] postmeta styling for widget bundle

Version 1.2.7
-----------------------------------
[added] postmeta setting to Category Posts Boxed widget
[added] postmeta setting to Category Posts Columns widget
[added] postmeta setting to Category Posts Grid widget
[fixed] CSS stylesheet for widget bundle

Version 1.2.6
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin
[removed] fallback solution for new title tag feature of WordPress
[removed] function_exists wrappers for action hook functions