@@ -13,7 +13,8 @@
 #customize-control-anderson_control_excerpt_text_headline, 
 #customize-control-anderson_control_postmeta_headline,
 #customize-control-anderson_control_post_footer_headline, 
-#customize-control-anderson_control_image_grayscale_headline {
+#customize-control-anderson_control_image_grayscale_headline,
+#customize-control-anderson_theme_options-slider_speed  {
 	margin-top: 16px;
 }
 #customize-control-anderson_control_featured_posts_header,
