@@ -48,7 +48,8 @@ function anderson_default_options() {
 		'post_navigation' 					=> false,
 		'slider_active' 					=> false,
 		'slider_active_magazine' 			=> false,
-		'slider_animation' 					=> 'horizontal',
+		'slider_animation' 					=> 'slide',
+		'slider_speed' 						=> 7000,
 	);
 	
 	return $default_options;
